platform_versioned_docs/version-4.12.0/maintenance/observability/quickstart.mdx
---
title: Fleet Observability quickstart
sidebar_label: Quickstart
sidebar_position: 2
description: Deploy the default Fleet Observability pipeline end to end with Argo CD, from the metrics backend to your first query.
sidebar_class_name: pro
---

import InterpolatedCodeBlock from "@site/src/components/InterpolatedCodeBlock";
import Tabs from "@theme/Tabs";
import TabItem from "@theme/TabItem";

This walks through the default, out-of-the-box path. It deploys the bundled Prometheus
backend and edge collectors with Argo CD to one tenant cluster, using YAML and `kubectl`
throughout. Each step links to a reference page with the full parameter list and the
Platform UI walkthrough. See those pages for alternatives, such as bringing your own
backend or targeting a control plane cluster.

## Prerequisites

- The [Argo CD integration](../../integrations/argocd/overview.mdx) is enabled on both the
  cluster where Platform is installed and the tenant cluster you collect from, each
  referencing an Argo CD connector. See
  [Connect to Argo CD](../../integrations/argocd/connect-argocd.mdx).
- A vCluster Platform license that includes Fleet Observability.
- `kubectl` access to a project namespace. Platform creates a namespace named
  `p-<project-name>` for each project, so the default project's namespace is `p-default`.
  Installations with a customized project namespace prefix, including installations
  upgraded from older versions, can use a different namespace.
- A tenant cluster to collect metrics from.

## 1. Deploy the metrics backend

Deploy the bundled Prometheus backend to the local cluster, the cluster where Platform
itself is installed:

```yaml title="fleet-metrics-backend.yaml"
apiVersion: management.loft.sh/v1
kind: ArgoCDApplication
metadata:
  name: fleet-metrics-backend
  namespace: p-my-project          # replace with your project namespace
spec:
  displayName: "Fleet metrics backend"
  destination:
    cluster:
      name: loft-cluster           # the reserved name for Platform's local cluster; don't change this
  templateRef:
    name: fleet-observability-prometheus
  parameters:
    destinationNamespace: vcluster-platform
    prometheusStorageSize: 20Gi
    project: default
```

```bash
kubectl apply -f fleet-metrics-backend.yaml
```

Confirm the application landed in your project's namespace:

```bash
kubectl get argocdapplications -n p-default
```

Substitute your project's namespace if you're not using the default project.

For other backends, the Platform UI, and the full parameter list, see
[Deploy the metrics backend with Argo CD](./install-observability-gateway.mdx#deploy-the-metrics-backend-with-argo-cd).

## 2. Create the connector and deploy the gateway

Create the observability connector Secret. These endpoints match the backend's default
namespace from step 1. The Secret below also configures the connector for the bundled
Grafana deployed in step 6, using that template's default certificate Secret name:

```yaml title="fleet-observability-connector.yaml"
apiVersion: v1
kind: Secret
metadata:
  name: fleet-observability
  namespace: vcluster-platform
  labels:
    loft.sh/connector-type: observability
    platform.vcluster.com/fleet-observability-connector: "true"
type: Opaque
stringData:
  metricsBackendOtlpEndpoint: https://prom-prometheus-server.vcluster-platform.svc.cluster.local/api/v1/otlp
  metricsBackendPromQLEndpoint: https://prom-prometheus-server.vcluster-platform.svc.cluster.local
  metricsBackendCertSecretName: metrics-backend-mtls
  grafanaUrl: https://grafana.vcluster-platform.svc.cluster.local
  grafanaCertSecretName: grafana-server-tls
  fleetObservabilityDashboardUid: vcluster-fleet-observability
```

```bash
kubectl apply -f fleet-observability-connector.yaml
```

Platform deploys the gateway from this Secret. Check that the gateway pod comes up:

```bash
kubectl get pods -n vcluster-platform -l app.kubernetes.io/name=gateway,app.kubernetes.io/instance=fleet-observability
```

For connector keys, TLS options, and the Platform UI, see
[Install the observability gateway](./install-observability-gateway.mdx).

## 3. Create a metrics-writer key

Create a `metrics-writer` access key scoped to your tenant cluster. Set `PROJECT` and
`TENANT_CLUSTER` to your tenant cluster's project and instance name. The command prints
the generated token as `token: <value>` at the end.

<InterpolatedCodeBlock
  code={
    'PROJECT=[[VAR:PROJECT:default]]\n' +
    'TENANT_CLUSTER=[[VAR:TENANT_CLUSTER:my-vcluster]]\n' +
    'KEY=$(head -c 20 /dev/urandom | od -An -tx1 | tr -d \' \\n\')\n' +
    'kubectl apply -f - <<EOF\n' +
    'apiVersion: storage.loft.sh/v1\n' +
    'kind: AccessKey\n' +
    'metadata:\n' +
    '  name: "loft-metrics-writer-p-${PROJECT}-${TENANT_CLUSTER}"\n' +
    'spec:\n' +
    '  type: Other\n' +
    '  key: "${KEY}"\n' +
    '  subject: "loft:metrics-writer:p-${PROJECT}:${TENANT_CLUSTER}"\n' +
    '  groups:\n' +
    '    - loft:system:metrics-writers\n' +
    '  scope:\n' +
    '    roles:\n' +
    '      - role: metrics-writer\n' +
    '    virtualClusters:\n' +
    '      - project: ${PROJECT}\n' +
    '        virtualCluster: "${TENANT_CLUSTER}"\n' +
    'EOF\n' +
    'echo "token: ${KEY}"'
  }
  language="bash"
/>

Keep the printed token for the next step.

For control plane cluster keys, reader keys, and rotation, see
[Configure metrics access](./configure-metrics-access.mdx).

## 4. Deploy edge collectors

The token from step 3 goes into a Secret inside the tenant cluster, in the namespace the
collectors run in. Switch your `kubectl` context to the tenant cluster, then create the
namespace and the Secret:

```bash
kubectl create namespace observability
```

```yaml title="otel-otlp-auth.yaml"
apiVersion: v1
kind: Secret
metadata:
  name: otel-otlp-auth
  namespace: observability
type: Opaque
stringData:
  authorization: "Bearer REPLACE_WITH_METRICS_WRITER_KEY"
```

```bash
kubectl apply -f otel-otlp-auth.yaml
```

Switch your `kubectl` context back to the cluster where Platform runs before continuing.
The `ArgoCDApplication` you apply next, and its project namespace, are Platform custom
resources that only exist on that cluster, not on the tenant cluster.

Then deploy the collector to your tenant cluster. Edge collectors run inside the tenant
cluster, which resolves DNS in its own zone, so `otlpEndpoint` needs to point somewhere
the tenant cluster can actually reach. Which value to use depends on where the tenant
cluster runs:

<Tabs
  defaultValue="same"
  values={[
    { label: "Same cluster as Platform", value: "same" },
    { label: "A different cluster", value: "different" },
  ]}
>
<TabItem value="same">

If the tenant cluster runs on the same control plane cluster as Platform, map the
gateway Service into the tenant cluster's DNS instead of exposing it externally. This
requires shared nodes tenancy. Add this to the tenant cluster's `vcluster.yaml`:

```yaml
controlPlane:
  coredns:
    enabled: true
    embedded: true
networking:
  resolveDNS:
    - service: vcluster-platform/gateway-fleet-observability
      target:
        hostService: vcluster-platform/gateway-fleet-observability
```

See [Resolve DNS](/docs/vcluster/configure/vcluster-yaml/networking/resolve-dns) for how
to apply `vcluster.yaml` changes and the full option reference. `otlpEndpoint` keeps using
the gateway's in-cluster Service name:

```yaml title="fleet-edge-collectors.yaml"
apiVersion: management.loft.sh/v1
kind: ArgoCDApplication
metadata:
  name: fleet-edge-collectors-my-vcluster   # include the tenant cluster name for uniqueness
  namespace: p-my-project          # replace with your project namespace
spec:
  displayName: "Fleet edge collectors"
  destination:
    virtualCluster:
      name: my-vcluster            # replace with your tenant cluster name
      target: vCluster             # deploy into the tenant cluster
  templateRef:
    name: cluster-collector
  parameters:
    destinationNamespace: observability
    otlpEndpoint: https://gateway-fleet-observability.vcluster-platform.svc.cluster.local:4318
    otlpInsecureSkipVerify: "true"
    project: default
```

</TabItem>
<TabItem value="different">

If the tenant cluster runs on a different cluster than Platform, it can't resolve or
route to the gateway's in-cluster Service name. Expose the gateway with a `LoadBalancer`
Service instead. Add `serviceType: LoadBalancer` to the connector Secret from step 2 and
reapply it, then retrieve the assigned address:

```bash
kubectl get svc -n vcluster-platform gateway-fleet-observability \
  -o jsonpath='{range .status.loadBalancer.ingress[*]}{.hostname}{.ip}{"\n"}{end}'
```

The cloud provider assigns the address asynchronously, so wait until it's populated, then
use it as `otlpEndpoint`:

```yaml title="fleet-edge-collectors.yaml"
apiVersion: management.loft.sh/v1
kind: ArgoCDApplication
metadata:
  name: fleet-edge-collectors-my-vcluster   # include the tenant cluster name for uniqueness
  namespace: p-my-project          # replace with your project namespace
spec:
  displayName: "Fleet edge collectors"
  destination:
    virtualCluster:
      name: my-vcluster            # replace with your tenant cluster name
      target: vCluster             # deploy into the tenant cluster
  templateRef:
    name: cluster-collector
  parameters:
    destinationNamespace: observability
    otlpEndpoint: https://REPLACE_WITH_LOADBALANCER_ADDRESS:4318
    otlpInsecureSkipVerify: "true"
    project: default
```

See [Expose the gateway with a LoadBalancer](./install-observability-gateway.mdx#expose-the-gateway-with-a-loadbalancer)
for certificate and Service annotation details.

</TabItem>
</Tabs>

Both branches keep `otlpInsecureSkipVerify: "true"` to accept the gateway's self-signed
certificate for this quickstart. For a production setup, distribute the gateway's
`ca.crt` instead, as described in
[Customize the gateway serving certificate](./install-observability-gateway.mdx#customize-the-gateway-serving-certificate).

```bash
kubectl apply -f fleet-edge-collectors.yaml
```

For control plane cluster targets, manual collector configuration, and the full
parameter list, see [Configure edge collectors](./configure-edge-collectors.mdx).

## 5. Verify

Check that metrics are reaching the gateway. Run the port-forward in the background and
capture its PID with `$!`. `--retry-connrefused` makes `curl` wait for the tunnel instead
of racing it:

```bash
GATEWAY_POD=$(kubectl get pod -n vcluster-platform -l app.kubernetes.io/name=gateway,app.kubernetes.io/instance=fleet-observability -o jsonpath='{.items[0].metadata.name}')
kubectl port-forward -n vcluster-platform pod/$GATEWAY_POD 8889:8889 &
PF_PID=$!
curl --retry 5 --retry-connrefused --retry-delay 1 http://127.0.0.1:8889/metrics
kill $PF_PID
```

Gateway metrics only confirm a write request arrived, not that it reached the backend.
Create a `metrics-reader` key scoped to the same tenant cluster and query the Query Proxy
for your first metric. Match `PROJECT` and `TENANT_CLUSTER` to the values you used in step
3. See [Create a reader key](./configure-metrics-access.mdx#create-a-reader-key) for the
full parameter list:

```bash
PROJECT=default
TENANT_CLUSTER=my-vcluster
METRICS_READER_TOKEN=$(head -c 20 /dev/urandom | od -An -tx1 | tr -d ' \n')
kubectl apply -f - <<EOF
apiVersion: storage.loft.sh/v1
kind: AccessKey
metadata:
  name: "loft-metrics-reader-p-${PROJECT}-${TENANT_CLUSTER}"
spec:
  type: Other
  key: "${METRICS_READER_TOKEN}"
  subject: "loft:metrics-reader:p-${PROJECT}:${TENANT_CLUSTER}"
  groups:
    - loft:system:metrics-readers
  scope:
    roles:
      - role: metrics-reader
    virtualClusters:
      - project: ${PROJECT}
        virtualCluster: "${TENANT_CLUSTER}"
EOF

GATEWAY_POD=$(kubectl get pod -n vcluster-platform -l app.kubernetes.io/name=gateway,app.kubernetes.io/instance=fleet-observability -o jsonpath='{.items[0].metadata.name}')
kubectl port-forward -n vcluster-platform pod/$GATEWAY_POD 8081:8081 &
PF_PID=$!
curl -k -G --retry 5 --retry-connrefused --retry-delay 1 \
  -H "Authorization: Bearer $METRICS_READER_TOKEN" \
  -H "X-Vcluster-Platform-Project: $PROJECT" \
  -H "X-Vcluster-Platform-Instance: $TENANT_CLUSTER" \
  --data-urlencode 'query=up' \
  https://127.0.0.1:8081/api/v1/query
kill $PF_PID
```

A non-empty `result` array confirms the write reached the backend and is queryable.

If writes aren't showing up, see [Troubleshooting](./troubleshooting.mdx).

## 6. Deploy the bundled Grafana (optional)

Deploy Grafana for pre-provisioned dashboards:

```yaml title="fleet-grafana.yaml"
apiVersion: management.loft.sh/v1
kind: ArgoCDApplication
metadata:
  name: fleet-grafana
  namespace: p-my-project          # replace with your project namespace
spec:
  displayName: "Fleet Grafana"
  destination:
    cluster:
      name: loft-cluster           # the reserved name for Platform's local cluster; don't change this
  templateRef:
    name: fleet-observability-grafana
  parameters:
    destinationNamespace: vcluster-platform
    platformHost: platform.example.com
    project: default
```

```bash
kubectl apply -f fleet-grafana.yaml
```

Once the Grafana pod is running, sign in at `https://<platform-host>/grafana/` with
Platform SSO to see the pre-provisioned Fleet Observability, Cluster Metrics, and GPU
Overview dashboards. For the connector settings Grafana needs and the full dashboard
list, see
[Deploy the bundled Grafana with Argo CD](./query-fleet-metrics.mdx#deploy-the-bundled-grafana-with-argo-cd).

## Next steps

- [Query fleet metrics](./query-fleet-metrics.mdx) for dashboards and PromQL access.
- [GPU observability templates](./gpu-observability-templates.mdx) to add the GPU stack and NVSentinel.
- [Troubleshooting](./troubleshooting.mdx) if something isn't working.
